<resources>
    <string name="app_name">LoginDemo</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">SIGN UP</string>



    <string name="launcher_text">Hello World</string>

</resources>
