<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.example.sith8.logindemo.MainActivity">

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fullname_TextLayout"
            >
        <android.support.design.widget.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fullname_EditText"
            android:hint="@string/full_name" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email_TextLayout"
        app:layout_constraintTop_toBottomOf="@id/fullname_TextLayout"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/email_EditText"
            android:hint="@string/email" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username_TextLayout"
        app:layout_constraintTop_toBottomOf="@id/email_TextLayout"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username_EditText"
            android:hint="@string/username" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password_TextLayout"
        app:layout_constraintTop_toBottomOf="@id/username_TextLayout"
        >
        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_EditText"
            android:hint="@string/password" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirmPassword_TextLayout"
        app:layout_constraintTop_toBottomOf="@id/password_TextLayout"
        >

       <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirmPassword_EditText"
            android:hint="@string/confirm_password" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/signUP_Button"
        android:hint="@string/sign_up"

        />



</android.support.constraint.ConstraintLayout>

